@@ -1,6 +1,11 @@
 = Pendiente
  * Agregar los mensajes que faltan
 
+= v00005b =
+@ 31/01/2018 - AGALAZ
+ * Se deja de utilizar la tabla tInicioTransferencia, porque distorsiona
+   la fecha real del último viaje o control file.
+
 = v00005a =
 @ 29/01/2017
  * FacturacionAdmin se vuelve a v004e
